--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="https://www.earthkt.tk" />
+  <meta name="twitter:title" content="Home | tinkerAI" />
+  <meta name="twitter:description" content="thinking-grpが制作・管理を行っているAIです。" />
+  <meta name="twitter:image" content="./image/ogp-logo.png" />
   <title>Home | thinkerAI</title>
 </head>
 <body>
