--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="twitter:site" content="https://thinking-grp.github.io/thinkerAI-Website/" />
   <meta name="twitter:title" content="Home | tinkerAI" />
   <meta name="twitter:description" content="thinking-grpが制作・管理を行っているAIです。" />
-  <meta name="twitter:image" content="./image/ogp-logo.png" />
+  <meta name="twitter:image" content="image/ogp-logo.png" />
   <meta name="description" content="GraphicsCreateの公式サイトです。Websiteの制作を行っています。" />
   <meta name="robots" content="index" />
   <meta property="og:title" content="Home | GraphicsCreate" />
