--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
   <meta property="og:url" content="https://thinking-grp.github.io/thinkerAI-Website/" />
   <meta property="og:image" content="https://thinking-grp.github.io/image/logo/ogp-logo.png" />
   <meta property="og:locale" content="ja_JP" />
-  <meta property="og:site_name" content="thinkerAI" />
-  <meta property="og:type" content="article" />
-  <meta property="og:description" content="thinking-grpが制作・管理を行っているAIです。" />
-  <meta property="og:url" content="https://thinking-grp.github.io/thinkerAI-Website/" />
-  <meta property="og:image" content="https://thinking-grp.github.io/image/logo/ogp-logo.png" />
-  <meta property="og:locale" content="ja_JP" />
-  <meta property="og:site_name" content="thinkerAI" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="https://thinking-grp.github.io/thinkerAI-Website/" />
+  <meta name="twitter:title" content="thinkerAI" />
+  <meta name="twitter:description" content="thinking-grpが制作・管理を行っているAIです。" />
+  <meta name="twitter:image" content="https://thinking-grp.github.io/image/logo/ogp-logo.png" />
   <title>Home | thinkerAI</title>
 </head>
 <body>
