--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="twitter:title" content="thinkerAI" />
   <meta name="twitter:description" content="thinking-grpが制作・管理を行っているAIです。" />
   <meta name="twitter:image" content="https://thinking-grp.github.io/image/logo/ogp-logo.png" />
-  <title>Home | thinkerAI</title>
+  <title>Ho | thinkerAI</title>
 </head>
 <body>
   
