--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="js-Jp">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="thinkerAI" />
-  <meta property="og:type" content="article" />
-  <meta property="og:description" content="thinking-grpが制作・管理を行っているAIです。" />
-  <meta property="og:url" content="https://thinking-grp.github.io/thinkerAI-Website/" />
-  <meta property="og:image" content="https://thinking-grp.github.io/image/logo/ogp-logo.png" />
-  <meta property="og:locale" content="ja_JP" />
-  <title>Ho | thinkerAI</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- ogp設定 -->
+    <meta property="og:title" content="thinkerAI" />
+    <meta property="og:type" content="article" />
+    <meta property="og:description" content="thinking-grpが制作・管理を行っているAIです。" />
+    <meta property="og:url" content="https://thinking-grp.github.io/thinkerAI-Website/" />
+    <meta property="og:image" content="https://thinking-grp.github.io/image/logo/ogp-logo.png" />
+    <meta property="og:locale" content="ja_JP" />
+
+    <!-- style-->
+    <link rel="stylesheet" href="style/home/style.css">
+    <link rel="stylesheet" href="style/config.css">
+    <link rel="stylesheet" href="style/head&footer.css">
+    <!-- icons -->
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+
+
+    <title>Home | thinkerAI</title>
+  </head>
+  <body>
+    <div id="head"></div>
+    <img class="topimg" src="image/topimg.png" alt="backimage" width="100%" height="100%">
+  </body>
+  <script src="script/home/script.js"></script>
+  <script src="script/config.js"></script>
+  <script src="script/head&footer.js"></script>
 </html>
