--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:description" content="thinking-grpが制作・管理を行っているAIです。" />
     <meta property="og:url" content="https://thinking-grp.github.io/thinkerAI-Website/" />
-    <meta property="og:image" content="https://thinking-grp.github.io/image/logo/ogp-logo.png" />
+    <meta property="og:image" content="/image/logo.png" />
     <meta property="og:locale" content="ja_JP" />
 
     <!-- style-->
