--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="thinker.AI" />
     <meta property="og:type" content="article" />
     <meta property="og:description" content="thinking-grpが制作・管理を行っているAIです。" />
-    <meta property="og:url" content="https://thinking-grp.github.io/thinker.AI/" />
+    <meta property="og:url" content="https://thinking-grp.github.io/thinkerAI-site/" />
     <meta property="og:image" content="https://thinking-grp.github.io/thinker.AI/image/logo.png" />
     <meta property="og:locale" content="ja_JP" />
 
