--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:locale" content="ja_JP" />
 
     <!-- style-->
-    <link rel="stylesheet" href="style/home/style.css">
+    <link rel="stylesheet" href="style/home/home-style.css">
     <link rel="stylesheet" href="style/config.css">
     <link rel="stylesheet" href="style/head&footer.css">
     <!-- icons -->
@@ -25,9 +25,26 @@
   <body>
     <div id="head"></div>
     <img class="topimg" src="image/topimg.png" alt="backimage" width="100%" height="100%">
-
+    
     <main>
-      
+      <div class="block block-one">
+        <div class="thinkerAI">
+          <p>次世代AI「thinkerAI」</p>
+          <p class="explanation-top">thinkerAIはGPT-2を使用した、拡張可能な雑談AIのプラットフォームです。</p>
+        </div>
+      </div>
+      <div class="block block-two">
+        <p class="pp"></p>
+      </div>
+      <div class="block block-three">
+        <p class="pp">demo</p>
+      </div>
+      <div class="block block-four">
+        <p class="pp">demo</p>
+      </div>
+      <div class="block block-five">
+        <p class="pp">demo</p>
+      </div>
     </main>
   </body>
   <script src="script/home/script.js"></script>
