--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
     
     <main>
       <div class="block block-one">
-        <div class="thinkerAI">
-          <p>次世代AI「thinkerAI」</p>
-          <p class="explanation-top">thinkerAIはGPT-2を使用した、拡張可能な雑談AIのプラットフォームです。</p>
+        <div>
+          <p class="thinkerAI">次世代AI「thinkerAI」</p>
+          <p class="explanation-top thinkerAI">thinkerAIはGPT-2を使用した、拡張可能な雑談AIのプラットフォームです。</p>
+          <div class="AI-about-style">
+            <a href="/AI-about.html">
+              About
+            </a>
+          </div>
         </div>
       </div>
       <div class="block block-two">
