--- a/index.html
+++ b/index.html
@@ -29,30 +29,23 @@
     <main>
       <div class="block block-one">
         <div>
-          <p class="thinkerAI">次世代AI「thinkerAI」</p>
-          <p class="explanation-top thinkerAI">thinkerAIはGPT-2を使用した、拡張可能な雑談AIのプラットフォームです。</p>
-          <div class="AI-about-style">
-            <a href="/AI-about.html">
-              About
-            </a>
-          </div>
+          <p class="thinkerAI">誰でも作ることのできる雑談AI</p>
         </div>
       </div>
       <div class="block block-two">
-        <p class="pp"></p>
       </div>
       <div class="block block-three">
-        <p class="pp">demo</p>
+        <p id="top-3">3</p>
       </div>
       <div class="block block-four">
-        <p class="pp">demo</p>
+        <p id="top-4">4</p>
       </div>
       <div class="block block-five">
-        <p class="pp">demo</p>
+        <p id="top-5">5</p>
       </div>
     </main>
   </body>
-  <script src="script/home/script.js"></script>
+  <script src="script/home/home-script.js"></script>
   <script src="script/config.js"></script>
   <script src="script/head&footer.js"></script>
   <script src="script/head.js"></script>
