--- a/index.html
+++ b/index.html
@@ -25,21 +25,11 @@
   <body>
     <div id="head"></div>
     <div class="block block-one">
-    <img class="topimg" src="image/topimg.png" alt="backimage" width="100%" height="100%">
+      <img class="topimg" src="image/topimg.png" alt="backimage" width="100%" height="100%">
+    </div>
+      <div class="block block-low block-two">
+        <p id="top-3">3</p>
       </div>
-      <div class="block block-two">
-        <p class="thinkerAI">誰でも作ることのできる雑談AI</p>
-      </div>
-      <div class="block block-three">
-          
-      </div>
-      <div class="block block-four">
-        <p id="top-4">4</p>
-      </div>
-      <div class="block block-five">
-        <p id="top-5">5</p>
-      </div>
-    </main>
   </body>
   <script src="script/home/home-script.js"></script>
   <script src="script/config.js"></script>
