--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ogp設定 -->
-    <meta property="og:title" content="thinker.AI" />
+    <meta property="og:title" content="thinkerAI" />
     <meta property="og:type" content="article" />
     <meta property="og:description" content="thinking-grpが制作・管理を行っているAIです。" />
     <meta property="og:url" content="https://thinking-grp.github.io/thinkerAI-site/" />
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
 
-    <title>Home | thinker.AI</title>
+    <title>Home | thinkerAI</title>
   </head>
   <body>
     <div id="head"></div>
