--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ogp設定 -->
-    <meta property="og:title" content="thinkerAI" />
+    <meta property="og:title" content="Home | thinkerAI" />
     <meta property="og:type" content="article" />
     <meta property="og:description" content="thinking-grpが制作・管理を行っているAIです。" />
     <meta property="og:url" content="https://thinking-grp.github.io/thinkerAI-site/" />
