--- a/AI-about.html
+++ b/AI-about.html
@@ -14,11 +14,18 @@
 
   
     <!-- icons -->
-    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+
+  <!-- style -->
+  <link rel="stylesheet" href="style/config.css">
+  <link rel="stylesheet" href="style/head&footer.css">
 
   <title>About | thinkerAI</title>
 </head>
 <body>
   
 </body>
+  <script src="script/config.js"></script>
+  <script src="script/head&footer.js"></script>
+  <script src="script/head.js"></script>
 </html>
