--- a/AI-about.html
+++ b/AI-about.html
@@ -23,7 +23,7 @@
   <title>About | thinkerAI</title>
 </head>
 <body>
-  
+  <div id="head"></div>
 </body>
   <script src="script/config.js"></script>
   <script src="script/head&footer.js"></script>
