--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
     <div class="block block-one">
       <img class="topimg" src="image/topimg.png" alt="backimage" width="100%" height="100%">
     </div>
-      <div class="block block-low block-two">
-        <p id="top-3">3</p>
+      <div class="block block-two">
+        <p class="two">thinkerAIはGPT-2を使用した
+          <br>
+          拡張可能な雑談AIのプラットフォームです。
+        </p>
       </div>
   </body>
   <script src="script/home/home-script.js"></script>
